k8s/fetcher-k8s/service.yaml
# apiVersion: v1
# kind: Service
# metadata:
#   name: fetcherapp-service
# spec:
#   selector:
#     app: fetcherapp
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 3000
#   type: NodePort

apiVersion: v1
kind: Service

metadata:
  name: fetcherapp-service

spec:
  selector:
    app: fetcherapp

  ports:
  - port: 80
    targetPort: 3000

  type: LoadBalancer
