k8s/fetcher-k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fetcherapp-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: fetcher.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: fetcherapp-service
            port:
              number: 80
